# cyllama

./: .clang-format  .gitignore  404.html  AGENT_ANALYSIS.md  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  Makefile  README.md  RECOMMENDED_TO_WRAP.md  TODO.md  index.html  mkdocs.yml  params_reference.md  pyproject.toml  requirements.txt  setup.py
.github/disabled/: codeql.yml
.github/workflows/: build-abi3.yml  build-cibw-abi3.yml  build-cibw-cached.yaml  build-cibw.yaml  build-cibw.yml  build-cibw2.yaml  build-gpu-wheels-abi3.yml  build-gpu-wheels-cached.yml  build-gpu-wheels.yml  build-gpu-wheels2.yml  build-manage.yml  build-matrix.yml  build-new-vulkan.yml  build-new-wheels.yml  build-simple.yml  build-wheel-cuda-hip.yaml  build-wheel.yaml  build-wheels.yml  build-windows.yml  ci.yaml  ci.yml  codeql.yml  publish-wheels.yml  release-github-pypi.yaml  test-cuda-wheel-split.yml  test-cuda-wheel.yml
agents/contracts/: index.html
agents/patterns/: index.html
agents/workflow/: index.html
agents_overview/: index.html
api_reference/: index.html
assets/: architecture.d2
build_backends/: index.html
build_options/: index.html
cancelling/: index.html
cli-cheatsheet/: index.html
context_caching/: index.html
cookbook/: index.html
dev/0.2.1-release-issue/: index.html
dev/abi3/: index.html
dev/build-options/: index.html
dev/chat_templates/: index.html
dev/contract-agent/: index.html
dev/cuda-double-free/: index.html
dev/cyllama-desktop/: index.html
dev/ggml-config/: index.html
dev/ggml-unification/: index.html
dev/ggml_max_name/: index.html
dev/mcp/: index.html
dev/nanobind/: index.html
dev/new-vulkan/: index.html
dev/onnx-integration/: index.html
dev/packaging/: index.html
dev/packaging-options/: index.html
dev/patch-0.2.16/: index.html
dev/pypi-deployment/: index.html
dev/runtime-guard/: index.html
dev/scaling_rag/: index.html
dev/single-binary/: index.html
dev/sqlite_db/: index.html
dev/static-vs-dynamic/: index.html
dev/test-cleanup/: index.html
dev/windows-cuda/: index.html
docs/: RAG_SUPPORT.md  agents_overview.md  api_reference.md  autoregressive_generation.md  backend_implementation.md  build_backends.md  build_options.md  cancelling.md  cli-cheatsheet.md  context_caching.md  contract_agent.md  contract_agent_impl.md  cookbook.md  cyllama_overview.md  cyllama_update.md  example_deps.md  examples.md  fixes.md  improvements_summary.md  index.md  installation.md  intro.md  mcp.md  overview.md  protocol_support.md  quickstart.md  rag_advanced.md  rag_embedder.md  rag_overview.md  rag_pipeline.md  rag_text_processing.md  rag_vectorstore.md  server_usage_examples.md  stable_diffusion.md  summary.md  threading.md  tool_deps.md  troubleshooting.md  user_guide.md  whisper.md
docs/agents/: contracts.md  patterns.md  workflow.md
docs/book/: Makefile  _quarto.yml  index.qmd  intro.qmd  references.bib  summary.qmd
docs/dev/: 0.2.1-release-issue.md  abi3.md  agent_patterns_and_frameworks.md  build-options.md  chat_templates.md  contract-agent.md  cuda-double-free.md  cyllama-desktop.md  ggml-config.md  ggml-unification.md  ggml_max_name.md  mcp.md  nanobind.md  new-vulkan.md  onnx-integration.md  packaging-options.md  packaging.md  patch-0.2.16.md  patch-mmproj-gemma4a.md  plugins.md  pypi-deployment.md  runtime-guard.md  scaling_rag.md  single-binary.md  sqlite_db.md  static-vs-dynamic.md  test-cleanup.md  windows-cuda.md
examples/: index.html
improvements_summary/: index.html
installation/: index.html
intro/: index.html
mcp/: index.html
overview/: index.html
quickstart/: index.html
rag_advanced/: index.html
rag_embedder/: index.html
rag_overview/: index.html
rag_pipeline/: index.html
rag_text_processing/: index.html
rag_vectorstore/: index.html
scripts/: batch_operations_benchmark.py  benchmark.py  build.py  context_operations_benchmark.py  copy_libs.py  download_models.py  focused_profile.py  format.py  funcs_py.sh  leak_check.py  make_xcframework.py  manage.py  manage_macos_intel.py  memory_management_benchmark.py  pooling_comparison_benchmark.py  profile_cyllama.py  property_access_benchmark.py  quick_profile.py  release_notes.py  run_wheel_test.py  setup.sh  setup2.sh  simple_profile.py  snap.sh  start.py  test.sh  tokenization_benchmark.py  vendor_jinja2.sh
scripts/archive/: build-llama-bins.sh  context_operations_benchmark.py  quick_profile.py  setup.archive.sh  snap.sh
scripts/case/: embed1.sh  rag-chat-gemma4-db.sh  rag-chat-gemma4.sh  rag-chat-qwen3-db.sh  rag-chat-qwen3.sh  rag-chat1.sh  rag-chat2.sh  transcribe1.sh  z_turbo_1.sh  z_turbo_1c.sh  z_turbo_2.sh  z_turbo_2c.sh  z_turbo_3c.sh
scripts/patches/: README.md  llama.cpp-gemma4a-clip_n_mmproj_embd.patch
scripts/sd/: z_turbo_1.sh  z_turbo_1c.sh
scripts/sh/: embed1.sh  rag-chat1.sh  z_turbo_1c1.sh
search/: search_index.json
server-tests/test_mongoose/: test_graceful_shutdown.py  test_mongoose_http.py  test_mongoose_manual_stop.py  test_mongoose_server.py
server-tests/test_server/: test_server.py
server_usage_examples/: index.html
stable_diffusion/: index.html
summary/: index.html
tests/: conftest.py  scratch.py  test_acp.py  test_agents_adversarial.py  test_agents_coercion.py  test_agents_composition.py  test_agents_constrained.py  test_agents_contract.py  test_agents_grammar.py  test_agents_grammar_e2e.py  test_agents_memory.py  test_agents_quarto.py  test_agents_react.py  test_agents_tools.py  test_agents_workflow.py  test_api.py  test_api_cache.py  test_api_mcp.py  test_async_agents.py  test_async_api.py  test_batching.py  test_cancel.py  test_chat.py  test_cli.py  test_common.py  test_comprehensive.py  test_context.py  test_download.py  test_enum_drift.py  test_error_messages.py  test_generate.py  test_gguf.py  test_highlevel.py  test_integrations.py  test_integrations_agents.py  test_jinja_chat.py  test_json_schema.py  test_jsonrpc.py  test_llama_cpp_surface.py  test_main.py  (+44 more)
threading/: index.html
troubleshooting/: index.html
user_guide/: index.html
whisper/: index.html
(+231 files in other folders)
